--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,18 @@
 {
-  "name": "Clock",
-  "version": "0.1.0",
-  "namespace": "Clock",
-  "package": "Clock.dll",
-  "manifest_version": 1,
+    "name": "Clock",
+    "version": "1.0.0",
+    "namespace": "Clock",
+    "package": "Clock.dll",
+    "manifest_version": 1,
 
-  "description": "Description of your module. Visit https://github.com/blish-hud/manifest.json/blob/master/manifest-v1.md for details about the manifest format.",
-  "dependencies": {
-    "bh.blishhud": ">=0.5.2"
-  },
-  "url": "https://github.com/manla/Clock",
-  "contributors": [
-    {
-      "name": "manla"
-    }
-  ]
+    "description": "Clock for Local, Tyria, and Server time",
+    "dependencies": {
+        "bh.blishhud": ">=0.5.2"
+    },
+    "url": "https://github.com/manlaan/BlishHud-Clock",
+    "contributors": [
+        {
+            "name": "Manlaan"
+        }
+    ]
 }
