--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "Clock",
-    "version": "1.1.0",
+    "version": "1.1.1",
     "namespace": "Manlaan.Clock",
     "package": "Clock.dll",
     "manifest_version": 1,
@@ -8,6 +8,10 @@
     "description": "Clock for Local, Tyria, and Server time",
     "dependencies": {
         "bh.blishhud": ">=0.10.0"
+    },
+    "changelog": {
+        "1.1.1": "2021-10-06: Added check for loading screen or map open, Upgraded to Blish 0.11.0",
+        "1.1.0": "2021-09-20: Custom Settings Panel, Drag Panel instead of coords, Upgraded to Blish 0.10.0"
     },
     "url": "https://github.com/manlaan/BlishHud-Clock",
     "contributors": [
