--- a/manifest.json
+++ b/manifest.json
@@ -7,11 +7,7 @@
 
     "description": "Clock for Local, Tyria, and Server time",
     "dependencies": {
-        "bh.blishhud": ">=0.10.0"
-    },
-    "changelog": {
-        "1.1.1": "2021-10-06: Added check for loading screen or map open, Upgraded to Blish 0.11.0",
-        "1.1.0": "2021-09-20: Custom Settings Panel, Drag Panel instead of coords, Upgraded to Blish 0.10.0"
+        "bh.blishhud": ">=0.11.0"
     },
     "url": "https://github.com/manlaan/BlishHud-Clock",
     "contributors": [
@@ -21,3 +17,10 @@
         }
     ]
 }
+/*
+    "changelog": {
+        "1.1.1": "2021-10-14: Added check for loading screen or map open, Upgraded to Blish 0.11.0, fixed 24Hr time to show leading zero.",
+        "1.1.0": "2021-09-20: Custom Settings Panel, Drag Panel instead of coords, Upgraded to Blish 0.10.0"
+    },
+
+*/
