--- a/manifest.json
+++ b/manifest.json
@@ -1,27 +1,32 @@
 {
-    "name": "Clock",
-    "version": "1.2.1",
-    "namespace": "Manlaan.Clock",
-    "package": "Clock.dll",
-    "manifest_version": 1,
+  "name": "Clock",
+  "version": "1.2.1",
+  "namespace": "Manlaan.Clock",
+  "package": "Clock.dll",
+  "manifest_version": 1,
 
-    "description": "Clock for Local, Tyria, and Server time",
-    "dependencies": {
-        "bh.blishhud": ">=0.11.6"
+  "description": "Clock for Local, Tyria, and Server time",
+  "dependencies": {
+    "bh.blishhud": ">=0.11.6"
+  },
+  "url": "https://github.com/manlaan/BlishHud-Clock",
+  "contributors": [
+    {
+      "name": "Manlaan",
+      "username": "manlaan.8921"
     },
-    "url": "https://github.com/manlaan/BlishHud-Clock",
-    "contributors": [
-        {
-            "name": "Manlaan",
-            "username": "manlaan.8921"
-        },
-        {
-            "name": "Nimmidev"
-        }
-    ]
+    {
+      "name": "Nimmidev"
+    },
+    {
+      "name": "Evalithia",
+      "username": "Erazai.7054"
+    }
+  ]
 }
 /*
     "changelog": {
+       "1.2.1E": "2023-04-23: Added flat clock, fixed some font alignment",
         "1.2.1": "2022-03-14: Undo PR changes, add check for location, fix day/night to show if no times selected",
         "1.2.0": "2022-03-14: Day/Night Display",
         "1.1.2": "2022-03-12: Out of bound fixes.  Blish 0.11.6",
